# agent-compare

./: .gitignore  .justfile  README.md  TODO.md  pyproject.toml
src/agent_compare/: __init__.py  cli.py  openshell.py  playground.py
src/agent_compare/custom_providers/: __init__.py
src/agent_compare/custom_providers/claude/: Dockerfile  __init__.py  policy.yaml  provider.py
src/agent_compare/custom_providers/core/: __init__.py  provider.py
src/agent_compare/custom_providers/gemini/: Dockerfile  __init__.py  policy.yaml  provider.py
