[project]
name = "agent-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taylor Agarwal", email = "taagarwa@redhat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
agent-compare = "agent_compare.cli:cli"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]                                                                                                                      
module-includes = ["src/agent_compare/**/*.yaml", "src/agent_compare/**/Dockerfile"] 

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "D", "C", "N"]
ignore = [
    "E501", # line-too-long
    "E402", # module-import-not-at-top-file
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D100", # undocumented-public-module
    "D413",
]
per-file-ignores = { "tests/*" = ["D"] }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.13",
]